deploy:package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "build.all": "yarn run build && yarn run build.server",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -20,8 +21,7 @@
     "preview": "qwik build preview && vite preview --open",
     "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "build.all": "yarn run build && yarn run build.server"
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.1.4",
